# Numtoname

./: LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
Numtoname/: functions.py
numtoname/: __init__.py  functions.py  helpers.py  tests.py
