[metadata]
name = numtoname        # How you named your package folder (MyLib)
version = attr: numtoname.0.3.0
license= MIT        # Chose a license from here: https://help.github.com/articles/licensing-a-repository
maintainer= Ben Messer
maintainer_email= benjamin.messer@outlook.com
description = A python module to convert a number or list of numbers into a variable name or list of variable names (or vice versa)
long_description= file: README.rst
long_description_content_type= text/x-rst
author = Ben Messer
author_email = benjamin.messer@outlook.com
url = https://github.com/benjaminmesser/Numtoname
download_url = https://github.com/benjaminmesser/Numtoname/archive/v_030.tar.gz
keywords = tools, development, naming

[options]
python_requires=>=3.7
classifiers=
    Development Status :: 4 - Beta      # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities

